# validity.red

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  robots.txt  sonar-project.properties  validity.red.code-workspace
.github/: FUNDING.yml  dependabot.yml
assets/: DashboardView-4c0a4ebe.js  DashboardView-4c0a4ebe.js.map  DashboardView-63f80588.js  DashboardView-63f80588.js.map  DashboardView-960cbf06.js  DashboardView-960cbf06.js.map  DashboardView-bf7ad946.css  DocumentCreateView-2cdbbce6.js  DocumentCreateView-2cdbbce6.js.map  DocumentCreateView-a41f54a1.js  DocumentCreateView-a41f54a1.js.map  DocumentCreateView-f7a83bf4.js  DocumentCreateView-f7a83bf4.js.map  DocumentService-9ed7368b.js  DocumentService-9ed7368b.js.map  DocumentService-c59b69cc.js  DocumentService-c59b69cc.js.map  DocumentService-dd0c20c8.js  DocumentService-dd0c20c8.js.map  DocumentType-53891787.js  DocumentType-53891787.js.map  DocumentType-69b8dd92.js  DocumentType-69b8dd92.js.map  DocumentType-eff85411.js  DocumentType-eff85411.js.map  DocumentView-007d53f9.js  DocumentView-007d53f9.js.map  DocumentView-6ea64d69.js  DocumentView-6ea64d69.js.map  DocumentView-832e8021.js  DocumentView-832e8021.js.map  DocumentsListView-22cb292b.js  DocumentsListView-22cb292b.js.map  DocumentsListView-324533b4.js  DocumentsListView-324533b4.js.map  DocumentsListView-32556dea.js  DocumentsListView-32556dea.js.map  (+43 more)
calendar-service/: .dockerignore  Cargo.toml  README.md  build.rs  calendar-service.Dockerfile
calendar-service/src/: encryptor.rs  main.rs  service.rs
(+238 files in other folders)
