[package]
name = "calendar-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
prost-types = "0.11.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ics = "0.5.8"
chrono = "0.4.22"

[build-dependencies]
tonic-build = "0.8.0"
