[package]
name = "calendar-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
ics = "0.5.8"
chrono = "0.4.24"
chrono-tz = "0.8.2"
aes-gcm = "0.10.1"
generic-array = "0.14.7"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
serial_test = "2.0.0"
